[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/players/player2/Player2.png" type="Texture" id=1]
[ext_resource path="res://assets/players/player2/dissappearing/Player2_1.png" type="Texture" id=2]
[ext_resource path="res://assets/players/player2/dissappearing/Player2_4.png" type="Texture" id=3]
[ext_resource path="res://assets/players/player2/dissappearing/Player2_3.png" type="Texture" id=4]
[ext_resource path="res://assets/players/player2/dissappearing/Player2_2.png" type="Texture" id=5]
[ext_resource path="res://L1P2.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "vanish",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "appear",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.6768, 59.5944 )

[node name="P2" type="Area2D"]
script = ExtResource( 6 )

[node name="P2ani" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "appear"

[node name="P2col" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Appear2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Vanish2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_P2_body_entered"]
[connection signal="animation_finished" from="P2ani" to="." method="_on_P2ani_animation_finished"]
[connection signal="timeout" from="Appear2" to="." method="_on_Appear2_timeout"]
[connection signal="timeout" from="Vanish2" to="." method="_on_Vanish2_timeout"]
